--- a/.github/workflows/go-test-coverage.yml
+++ b/.github/workflows/go-test-coverage.yml
@@ -17,7 +17,7 @@ jobs:
     - name: Set up Go
       uses: actions/setup-go@v4
       with:
-        go-version: ‘1.23’ # Change this to the Go version you’re using
+        go-version: 1.23 # Change this to the Go version you’re using
 
     - name: Install dependencies
       run: go mod tidy
