--- a/.github/workflows/go-test-coverage.yml
+++ b/.github/workflows/go-test-coverage.yml
@@ -7,37 +7,11 @@ on:
     branches: [ main ]
 
 jobs:
-  test:
+  test-coverage:
     runs-on: ubuntu-latest
 
     steps:
-    - name: Checkout code
-      uses: actions/checkout@v4
-
-    - name: Set up Go
-      uses: actions/setup-go@v4
-      with:
-        go-version: 1.23 # Change this to the Go version you’re using
-
-    - name: Install dependencies
-      run: go mod tidy
-
-    - name: Run tests
-      run: go test -v ./...
-
-    - name: Generate coverage report
-      run: go test -coverprofile=coverage.out ./...
-
-    - name: Check coverage
-      id: coverage
-      run: |
-        coverage=$(go tool cover -func=coverage.out | grep total | awk ‘{print substr($3, 1, length($3)-1)}’)
-        echo “total_coverage=$coverage” >> $GITHUB_OUPUT
-        echo “Coverage: $coverage%”
-      
-    - name: Fail if coverage is below threshold
-      run: |
-        if (( $(echo “$total_coverage < 80” | bc -l) )); then
-          echo “Coverage ($total_coverage%) is below the threshold (80%)”
-          exit 1
-        fi
+      - name: check test coverage
+        uses: vladopajic/go-test-coverage@v2
+        with:
+          config: .testcoverage.yml
