--- a/.gitignore
+++ b/.gitignore
@@ -1,5 +1,9 @@
 # See https://help.github.com/articles/ignoring-files/ for more about ignoring files.
 
+# !IMPORTANT! This will ignore our firebase config file
+firebase-config.json
+firebase-config.b64
+
 # dependencies
 /node_modules
 /.pnp
