--- a/.gitignore
+++ b/.gitignore
@@ -1,6 +1,6 @@
 # See https://help.github.com/articles/ignoring-files/ for more about ignoring files.
 
-# !IMPORTANT! This will ignore our firebase config file
+# !IMPORTANT! This will ignore our firebase config file that we have locally
 firebase-config.json
 firebase-config.b64
 
