--- a/frontend/package.json
+++ b/frontend/package.json
@@ -18,6 +18,7 @@
     "firebase": "^11.6.0",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
+    "react-error-boundary": "^6.0.0",
     "react-router": "^7.3.0"
   },
   "devDependencies": {
